fix z-index

--- a/client/src/Components/PopUpModule/PopUpModule.module.css
+++ b/client/src/Components/PopUpModule/PopUpModule.module.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   position: fixed;
-  z-index: +1;
+  z-index: +9999;
   top: calc(var(--header-height) - 10px);
   min-width: var(--popup-min-width);
   min-height: fit-content;
